2009-11-24  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-08
        * Updates to PPM monitoring.

2009-11-19  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-07
        * Updates to PPM monitoring mainly.

2009-09-29  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-06
        * Add option to allow exclusion of corrupt events from plots

2009-09-24  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-05
        * Exclude corrupt events from most histograms.

2009-09-22  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-04
        * Update ROB status bits to tdaq-02-00-00.

2009-09-21  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-03
        * Bugfix for JEM-CMM timeslice comparison plot. 

2009-09-15  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-02
        * Bugfixes and finish move to new histogram naming convention.

2009-09-07  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-01
        * Missed an update needed for global overview with new tool.

2009-09-07  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-06-00
        * Replace JEPTransPerfMon with JEPSimBSMon tool.
          Allows for more effective debugging of JEP system.

2009-09-01  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-05-09
        * Add histograms of ROB status errors and bytestream unpacking
          errors.

2009-08-24  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-05-08
        * Remove references to ATLASCosmicFlags in jobOptions

2009-07-07  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-05-07
        * Minor change to CP RoI eta/phi plots
