@@ -1,3 +1,7 @@
+2009-12-08  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-06-09
+        * Make jobOptions aware of processing step on Tier0.
+
 2009-11-24  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-06-08
         * Updates to PPM monitoring.
